<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edu.umbc.dmutlu1.photoprintsdem.MainActivity">

    <android.support.v7.widget.Toolbar
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@mipmap/ic_launcher_round"
            app:title="@string/app_name"
            android:elevation="4dp"
            app:titleTextColor="@android:color/primary_text_dark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <android.support.v7.widget.CardView
                android:layout_width="318dp"
                android:layout_height="464dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardElevation="4dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorPrimaryDark"/>

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:hint="@string/hint"
                        android:gravity="center_horizontal"/>

                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:id="@+id/radioGroup">

                    <RadioButton
                            android:text="@string/four_six"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio4x6"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:checked="true"/>

                    <RadioButton
                            android:text="@string/five_seven"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio5x7"
                            android:layout_weight="1"
                            android:textSize="18sp"/>

                    <RadioButton
                            android:text="@string/eight_ten"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/radio8x10"
                            android:layout_weight="1"
                            android:textSize="18sp"/>
                </RadioGroup>

                <Button
                        android:text="@string/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button"
                        android:layout_marginTop="35dp"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textOut"
                        android:layout_marginTop="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/button"
                        android:layout_marginRight="8dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintVertical_bias="0.542"
                        app:layout_constraintHorizontal_bias="0.502"
                        android:visibility="invisible"
                        android:textColor="@color/colorAccent"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
